--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,9 +17,12 @@
     <color name="green">#23DB80</color>
     <color name="red">#ED6F6F</color>
 
+    <color name="request_details_bg">#F2F2F2</color>
+
 
     <color name="white">#FEFEFE</color>
     <color name="gray">#6D6D6D</color>
-    <color name="light_gray">#AEADAD</color>
+    <color name="light_gray">#B1B1B1</color>
+    <color name="stepper_gray">#F5F5F5</color>
     <color name="black">#101010</color>
 </resources>
