--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -132,7 +132,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Request Cost"
+                        android:text="@string/request_cost"
                         android:textColor="@color/black"
                         android:textSize="20sp" />
 
