--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -53,7 +53,8 @@
                 android:hint="@string/type_to_search"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:autofillHints="" />
 
             <ImageView
                 android:id="@+id/filter_btn"
@@ -71,7 +72,8 @@
             android:id="@+id/projects_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            tools:listitem="@layout/item_projects"/>
 
 
     </LinearLayout>
