--- a/app/src/main/res/layout/item_notifications.xml
+++ b/app/src/main/res/layout/item_notifications.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="hesham update requqest successfully"
+                android:text="@string/test_text"
                 android:layout_marginStart="10dp"/>
 
 
