--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,17 +12,17 @@
     <color name="service_type_bg">#DEECFF</color>
     <color name="notification_list_item_bg">#FAFAFA</color>
     <color name="text_dark_blue">#0050A6</color>
-    <color name="line_blue">#B30050A6</color>
-    <color name="text_light_blue">#03A9F4</color>
+    <color name="line_blue">#4D0050A6</color>
+    <color name="text_light_blue">#9903A9F4</color>
     <color name="green">#23DB80</color>
     <color name="red">#ED6F6F</color>
-
     <color name="request_details_bg">#F2F2F2</color>
 
 
     <color name="white">#FEFEFE</color>
     <color name="gray">#6D6D6D</color>
     <color name="light_gray">#B1B1B1</color>
+    <color name="text_request_gray">#994E4E4E</color>
     <color name="stepper_gray">#F5F5F5</color>
     <color name="black">#101010</color>
 </resources>
