--- a/app/src/main/res/layout/item_projects.xml
+++ b/app/src/main/res/layout/item_projects.xml
@@ -251,7 +251,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/quantity"
+                            android:id="@+id/created_by"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/test_text"
@@ -283,6 +283,7 @@
                 android:weightSum="3">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/done"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="5dp"
@@ -295,6 +296,7 @@
                     android:textSize="13sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/cancel"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="5dp"
@@ -306,6 +308,7 @@
                     android:textSize="13sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/view_requests"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
