--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
     android:background="@color/white"
+    android:orientation="vertical"
+    android:paddingStart="15dp"
+    android:paddingTop="15dp"
+    android:paddingEnd="15dp"
     tools:context=".home.settings.SettingsFragment">
 
 
@@ -15,8 +17,8 @@
         android:layout_height="wrap_content"
         android:text="@string/settings"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -50,7 +52,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        android:background="@color/light_gray"/>
+        android:background="@color/light_gray" />
 
     <RelativeLayout
         android:layout_width="match_parent"
