--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -72,14 +72,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/filter_btn"
+                android:autofillHints=""
                 android:background="@drawable/et_gray"
                 android:drawableEnd="@drawable/ic_search"
                 android:drawableTint="@color/black"
                 android:hint="@string/type_to_search"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
-                android:padding="8dp"
-                android:autofillHints="" />
+                android:padding="8dp" />
 
             <ImageView
                 android:id="@+id/filter_btn"
@@ -94,27 +94,32 @@
         </RelativeLayout>
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/requests_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="scrollable"
             app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/purchase_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/purchasing" />
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/print_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/printing" />
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/production_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/production" />
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/photography_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/photography" />
@@ -164,7 +169,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_purchase"
             app:fab_colorNormal="@color/colorAccent"
-            app:fab_size="mini"/>
+            app:fab_size="mini" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/production_btn"
@@ -172,15 +177,15 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_production"
             app:fab_colorNormal="@color/colorAccent"
-            app:fab_size="mini"/>
+            app:fab_size="mini" />
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/printing_btn"
+            android:id="@+id/print_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_print"
             app:fab_colorNormal="@color/colorAccent"
-            app:fab_size="mini"/>
+            app:fab_size="mini" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
