--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -9,7 +9,7 @@
     android:paddingStart="15dp"
     android:paddingTop="15dp"
     android:paddingEnd="15dp"
-    tools:context=".project_requests.RequestsActivity">
+    tools:context=".requests.RequestsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
