--- a/app/src/main/res/layout/item_request_print.xml
+++ b/app/src/main/res/layout/item_request_print.xml
@@ -64,13 +64,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/sales_contact"
+                        android:text="@string/created_by"
                         android:textColor="@color/text_request_gray"
                         android:textSize="12sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/sales_contact"
+                        android:id="@+id/created_by"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/test_text"
@@ -227,7 +227,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/created_by"
+                            android:id="@+id/quantity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/test_text"
