--- a/app/src/main/res/layout/item_request_photography.xml
+++ b/app/src/main/res/layout/item_request_photography.xml
@@ -147,7 +147,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/designer"
+                            android:id="@+id/location"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/test_text"
