--- a/app/src/main/res/layout/activity_add_production.xml
+++ b/app/src/main/res/layout/activity_add_production.xml
@@ -9,7 +9,7 @@
     android:paddingStart="15dp"
     android:paddingTop="15dp"
     android:paddingEnd="15dp"
-    tools:context=".requests.production.AddProductionActivity">
+    tools:context=".requests.Add.AddProductionActivity">
 
 
     <LinearLayout
