--- a/app/src/main/res/layout/activity_add_purchase.xml
+++ b/app/src/main/res/layout/activity_add_purchase.xml
@@ -9,7 +9,7 @@
     android:paddingStart="15dp"
     android:paddingTop="15dp"
     android:paddingEnd="15dp"
-    tools:context=".requests.purchase.AddPurchaseActivity">
+    tools:context=".requests.Add.AddPurchaseActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
