--- a/app/src/main/res/layout/fragment_photography_requests.xml
+++ b/app/src/main/res/layout/fragment_photography_requests.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".requests.photography.Photography_requests_fragment">
+    tools:context=".requests.list.Photography_requests_fragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
