--- a/app/src/main/res/layout/activity_add_print.xml
+++ b/app/src/main/res/layout/activity_add_print.xml
@@ -247,10 +247,12 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/color_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
