--- a/app/src/main/res/layout/activity_add_photography.xml
+++ b/app/src/main/res/layout/activity_add_photography.xml
@@ -296,6 +296,7 @@
                 </RadioGroup>
 
                 <LinearLayout
+                    android:id="@+id/lighting_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -360,6 +361,7 @@
                 </RadioGroup>
 
                 <LinearLayout
+                    android:id="@+id/chroma_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -424,6 +426,7 @@
                 </RadioGroup>
 
                 <LinearLayout
+                    android:id="@+id/props_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
