--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -97,7 +97,7 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/request_details_bg">
@@ -116,9 +116,9 @@
                 android:background="@drawable/white_curved"
                 android:orientation="vertical"
                 android:paddingStart="15dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="15dp"
-                android:paddingBottom="10dp">
+                android:paddingTop="5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="5dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -127,19 +127,29 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
                         android:text="@string/request_details"
                         android:textColor="@color/black"
                         android:textSize="20sp" />
 
 
                     <ImageView
+                        android:id="@+id/expand_details"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
+                        android:padding="5dp"
                         android:contentDescription="@string/description"
                         android:src="@drawable/ic_arrow_down" />
                 </RelativeLayout>
+
+                <FrameLayout
+                    android:id="@+id/request_details_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
@@ -150,9 +160,9 @@
                 android:background="@drawable/white_curved"
                 android:orientation="vertical"
                 android:paddingStart="15dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="15dp"
-                android:paddingBottom="10dp">
+                android:paddingTop="5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="5dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -163,23 +173,35 @@
                         android:layout_height="wrap_content"
                         android:text="@string/request_cost"
                         android:textColor="@color/black"
+                        android:layout_centerVertical="true"
                         android:textSize="20sp" />
 
 
                     <ImageView
+                        android:id="@+id/expand_cost"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:contentDescription="@string/description"
-                        android:src="@drawable/ic_arrow_down" />
+                        android:src="@drawable/ic_arrow_down"
+                        android:padding="5dp" />
                 </RelativeLayout>
+
+
+
+                <FrameLayout
+                    android:id="@+id/request_cost_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </LinearLayout>
