--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,6 @@
     <color name="light_gray">#B1B1B1</color>
     <color name="text_request_gray">#994E4E4E</color>
     <color name="stepper_gray">#F5F5F5</color>
+    <color name="line_gray">#F5F5F5</color>
     <color name="black">#101010</color>
 </resources>
